@@ -121,6 +121,7 @@ Grob::get_print_stencil () const
 
 	  retval = Stencil (m->extent_box (), expr);
 	}
+
       SCM rot = get_property ("rotation");
       if (scm_is_pair (rot))
 	{
@@ -135,12 +136,11 @@ Grob::get_print_stencil () const
       SCM color = get_property ("color");
       if (color != SCM_EOL)
 	{
-	  m = unsmob_stencil (stil);
 	  SCM expr = scm_list_3 (ly_symbol2scm ("color"),
 				 color,
-				 m->expr ());
+				 retval.expr ());
 
-	  retval = Stencil (m->extent_box (), expr);
+	  retval = Stencil (retval.extent_box (), expr);
 	}
 
     }
